pulling in boost from conan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,17 @@
+cmake_minimum_required(VERSION 3.12)
+
 project(monsewn)
 
-cmake_minimum_required(VERSION 3.11)
+if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+   message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+   file(DOWNLOAD "https://github.com/conan-io/cmake-conan/raw/v0.15/conan.cmake"
+                 "${CMAKE_BINARY_DIR}/conan.cmake")
+endif()
 
-include(cmake/conan.cmake)
+include(${CMAKE_BINARY_DIR}/conan.cmake)
+
+conan_cmake_run(REQUIRES boost/1.72.0
+                BASIC_SETUP CMAKE_TARGETS
+                BUILD missing)
 
 add_subdirectory(monsewn)
