Breaking out downloader class, libmon. Adding some command line options

--- a/monsewn/CMakeLists.txt
+++ b/monsewn/CMakeLists.txt
@@ -1,2 +1,13 @@
-add_executable(Monsewn main.cpp)
-target_link_libraries(Monsewn ${CONAN_LIBS})
+set(include_list
+	downloader.h
+	)
+
+set(source_list
+	downloader.cpp
+	)
+
+add_library(mon ${source_list} ${include_list})
+
+add_executable(Monsewn main.cpp "downloader.cpp")
+
+target_link_libraries(Monsewn ${CONAN_LIBS} mon)
