--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,9 +10,11 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: setup
-      run: export PATH=$PATH:/home/runner/.local/bin && python3 -m pip install -U pip setuptools && python3 -m pip install wheel && python3 -m pip install conan
+      run:  python3 -m pip install -U pip setuptools && python3 -m pip install wheel && python3 -m pip install conan
     - name: configure
       run: mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS="-Werror" ..
+      env:
+        PATH: $PATH:/home/runner/.local/bin
     - name: build
       run: cmake --build build
     - name: test
