--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -23,7 +23,7 @@ jobs:
     - name: setup
       run:  python3 -m pip install conan
     - name: configure
-      run: mkdir build && cd build && cmake ..
+      run: mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug ..
     - name: build
       run: cmake --build build
     - name: test
